19version, finished all the pages

--- a/app/views/blogs/index_blog.html.erb
+++ b/app/views/blogs/index_blog.html.erb
@@ -90,11 +90,11 @@
                                     <li><i class="fa fa-calendar"></i> 11st Nov 2015</li>
                                     <li><i class="fa fa-tag"></i> <a href="#">Product</a></li>
                                 </ul>
-                                <h2><a href="#">Crowd-geo Product Design</a></h2>
+                                <h2><a href="#">Result-based crowd busting</a></h2>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis.
-                                    Pellentesque cursus arcu id magna euismod in elementum purus molestie
-
+                                    Productivity is critical to the development of every business whatevery you
+                                    are a small business or a big international enterprise.
+                                    Result-based crowd busting leads a productive way for product development.
                                 </p>
                                 <p><a href="blog-single.html" class="btn btn-theme-dark">Read More...</a></p>
                             </div>
@@ -119,9 +119,11 @@
                                     <li><i class="fa fa-calendar"></i> 11st Nov 2015</li>
                                     <li><i class="fa fa-tag"></i> <a href="#">Quality</a></li>
                                 </ul>
-                                <h2><a href="#">Result-based crowd busting</a></h2>
+                                <h2><a href="#">Crowd-geo Product Design</a></h2>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis. Pellentesque cursus arcu id magna euismod in elementum purus molestie
+                                    Bugsters platform has over 1000+ active users around the
+                                    world across Australia, China, North America, Europe and New Zealand. The crowd-geo
+                                    platforms helps companies to analyze their products in a fullaround way.
                                 </p>
                                 <p><a href="blog-single.html" class="btn btn-theme-dark">Read More...</a></p>
                             </div>
@@ -148,7 +150,9 @@
                                 </ul>
                                 <h2><a href="#">Embrace Users' Voice</a></h2>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis. Pellentesque cursus arcu id magna euismod in elementum purus molestie
+                                    When I use software applications, I often find some functions not working well.
+                                    Many times, I am thinking if there is a place which I can tell the company
+                                    the real voice as a user and they can care my value. It would be great. So I come to Bugsters platform.
                                 </p>
                                 <p><a href="blog-single.html" class="btn btn-theme-dark">Read More...</a></p>
                             </div>
@@ -175,7 +179,9 @@
                                 </ul>
                                 <h2><a href="#">Win in the mobile security</a></h2>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis. Pellentesque cursus arcu id magna euismod in elementum purus molestie
+                                    When you work or live with those young people, you will find, mobile phone become
+                                    a tool which they use every morning when they wake up and every evening before they
+                                    to bed. Mobile becomes important to people's lives and security is a thing.
                                 </p>
                                 <p><a href="blog-single.html" class="btn btn-theme-dark">Read More...</a></p>
                             </div>
@@ -195,21 +201,21 @@
                         </form>
                     </div><!--sidebar-box-->
                     <div class="sidebar-box margin40">
-                        <h4>Text widget</h4>
+                        <h4>About Bugsters</h4>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis. Pellentesque cursus arcu id magna euismod in elementum purus molestie.
+                            Bugsters is a result-based crowd-busting platform. We believe everybody is a natural creative buster and make exceptional value to perfect a product.
                         </p>
                     </div><!--sidebar-box-->
                     <div class="sidebar-box margin40">
                         <h4>Categories</h4>
                         <ul class="list-unstyled cat-list">
-                            <li> <a href="#">Marketing</a> <i class="fa fa-angle-right"></i></li>
-                            <li> <a href="#">Videos</a> <i class="fa fa-angle-right"></i></li>
-                            <li> <a href="#">Sports</a> <i class="fa fa-angle-right"></i></li>
-                            <li> <a href="#">Fashion</a> <i class="fa fa-angle-right"></i></li>
-                            <li> <a href="#">Media</a> <i class="fa fa-angle-right"></i></li>
-                            <li> <a href="#">Seo</a> <i class="fa fa-angle-right"></i></li>
-                            <li> <a href="#">Marketing</a> <i class="fa fa-angle-right"></i></li>
+                            <li> <a href="#">Financial</a> <i class="fa fa-angle-right"></i></li>
+                            <li> <a href="#">Education</a> <i class="fa fa-angle-right"></i></li>
+                            <li> <a href="#">AI/AR</a> <i class="fa fa-angle-right"></i></li>
+                            <li> <a href="#">SocialMeida</a> <i class="fa fa-angle-right"></i></li>
+                            <li> <a href="#">MultiMedia</a> <i class="fa fa-angle-right"></i></li>
+                            <li> <a href="#">Game</a> <i class="fa fa-angle-right"></i></li>
+                            <li> <a href="#">Others</a> <i class="fa fa-angle-right"></i></li>
                         </ul>
                     </div><!--sidebar-box-->
                     <div class="sidebar-box margin40">
@@ -220,8 +226,8 @@
                                     <a href="#"> <img src="<%= asset_path "img-7.jpg" %>" class="img-responsive" alt=""></a>
                                 </div>
                                 <div class="popular-desc">
-                                    <h5> <a href="#">blog post image</a></h5>
-                                    <h6>31st july 2014</h6>
+                                    <h5> <a href="#">Result-based crowd busting</a></h5>
+                                    <h6>10th Nov 2015</h6>
                                 </div>
                             </li>
                             <li>
@@ -229,8 +235,8 @@
                                     <a href="#"> <img src="<%= asset_path "img-8.jpg" %>" class="img-responsive" alt=""></a>
                                 </div>
                                 <div class="popular-desc">
-                                    <h5> <a href="#">blog post image</a></h5>
-                                    <h6>31st july 2014</h6>
+                                    <h5> <a href="#">Embrace Users' Voice</a></h5>
+                                    <h6>12nd Nov 2015</h6>
                                 </div>
                             </li>
                             <li>
@@ -238,8 +244,8 @@
                                     <a href="#"> <img src="<%= asset_path "img-9.jpg" %>" class="img-responsive" alt=""></a>
                                 </div>
                                 <div class="popular-desc">
-                                    <h5> <a href="#">blog post image</a></h5>
-                                    <h6>31st july 2014</h6>
+                                    <h5> <a href="#">Win in the mobile security</a></h5>
+                                    <h6>11st Nov 2015</h6>
                                 </div>
                             </li>
                         </ul>
@@ -247,15 +253,15 @@
                     <div class="sidebar-box margin40">
                         <h4>Tag Cloud</h4>
                         <div class="tag-list">
-                            <a href="#">Wordpress</a>
-                            <a href="#">Design</a>
-                            <a href="#">Graphics</a>
-                            <a href="#">Seo</a>
-                            <a href="#">Development</a>
-                            <a href="#">Marketing</a>
-                            <a href="#">fashion</a>
-                            <a href="#">Media</a>
-                            <a href="#">Photoshop</a>
+                            <a href="#">MobileApp</a>
+                            <a href="#">SmartJewellery</a>
+                            <a href="#">SaaS</a>
+                            <a href="#">IoT</a>
+                            <a href="#">Robotics</a>
+                            <a href="#">SocialMedia</a>
+                            <a href="#">E-commerce</a>
+                            <a href="#">Game</a>
+                            <a href="#">Others</a>
                         </div>
                     </div>
                 </div><!--sidebar-col-->
