--- a/app/views/career/index_career.html.erb
+++ b/app/views/career/index_career.html.erb
@@ -97,14 +97,15 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                                        Web Designer <br>
-                                        <em>(2-4 years of experience)</em>
+                                        Software Engineer <br>
+                                        <em>(Full Stack, Ruby, Ruby on Rails)</em>
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseOne" class="panel-collapse collapse in">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    We welcome a passionate full stack software engineer to join our family. <br>
+                                    You are expected to have the skills as below: Ruby, Ruby on Rails, HTML5, CSS3, Javascript, SQLite3, MySQL, PostgreSQL, Popular Gems, Git, GitHub and Heroku.
                                     <div class="divide30"></div>
                                     <p><a href="#" class="btn btn-theme-bg">Apply Now</a></p>
                                 </div>
@@ -115,13 +116,15 @@
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion" href="#collapsetwo">
                                         Android Developer <br>
-                                        <em>(5-9 years of experience)</em>
+                                        <em>(Full Stack, Java)</em>
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapsetwo" class="panel-collapse collapse ">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    We welcome a skillful Android developer to join our family. <br>
+                                    You are expected to have the skills as below: Java, Android SDK, JSON/REST APIs, Git and Github.
+
                                     <div class="divide30"></div>
                                     <p><a href="#" class="btn btn-theme-bg">Apply Now</a></p>
                                 </div>
@@ -131,14 +134,15 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion" href="#collapsethree">
-                                        Php Developer <br>
-                                        <em>(1-2 years of experience)</em>
+                                        iOS Developer <br>
+                                        <em>(Full Stack, Swift)</em>
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapsethree" class="panel-collapse collapse ">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    We welcome an experienced iOS developer to join our family. <br>
+                                    You are expected to have the below skills: Objective-C, Swift, RESTful APIs, Cocoa Touch Frameworks, Git and Github.
                                     <div class="divide30"></div>
                                     <p><a href="#" class="btn btn-theme-bg">Apply Now</a></p>
                                 </div>
@@ -155,9 +159,11 @@
                         </form>
                     </div><!--sidebar-box-->
                      <div class="sidebar-box margin40">
-                        <h4>Text widget</h4>
+                        <h4>Tips</h4>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis. Pellentesque cursus arcu id magna euismod in elementum purus molestie.
+                            We care about your passion more than your paper resume. <br>
+                            We care about your sharp skills more than the num of experience. <br>
+                            We care about all our team members and respect their mind!
                         </p>
                     </div><!--sidebar-box-->
 
