--- a/app/views/faqs/index_faq.html.erb
+++ b/app/views/faqs/index_faq.html.erb
@@ -73,7 +73,7 @@
                     <div class="center-heading">
                         <h2>Got any questions?</h2>
                         <span class="center-line"></span>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis</p>
+                        <p class="lead"> Please search the frequently asked Questions & Answers or type your questions, we will get back to you soon.</p>
                     </div><!--center-heading-->
                 </div>
             </div>
@@ -85,13 +85,13 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                                        How can i go for it?
+                                        What is Bugsters?
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseOne" class="panel-collapse collapse in">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    Bugsters provides a result-based crowdtesting platform which allows world's users to bust your products and pay based on the bug which the software busters find. But we are not stopping here, We also connect world's tech experts to help enterprises to solve their problems through our crowd-tech expert online platform.
                                 </div>
                             </div>
                         </div>
@@ -99,13 +99,13 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                                        Is there are any support?
+                                        What is result-based crowd-busting platform?
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseTwo" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                   It costs a lot of money to research user experience and control the quality of product during the development period. On our platform, you only needs to pay the result which are true voice which the users posted or the bugs which the real users find.
                                 </div>
                             </div>
                         </div>
@@ -113,13 +113,13 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                                        How can i buy it?
+                                        Who started the fire of Bugsters?
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapseThree" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    Bugsters was created by busters who believe everybody is curious buster and they make an exceptional value to product development and design.
                                 </div>
                             </div>
                         </div>
@@ -127,13 +127,13 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-                                        compatible with bootstrap3.3.1?
+                                        What is online Crowd Technical Experts platform?
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapse4" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                   Online crowd technical experts platform provides an online platform which allow you to instantly access the world's top technical experts.
                                 </div>
                             </div>
                         </div>
@@ -141,13 +141,13 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">
-                                        Fully Responsive?
+                                        How to get paid to the bugs which I find?
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapse5" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    We divide bugs to three severity: critical, major and minor. The critical bug will get paid for $1,000.00, major bug will get paid for $100.00 and minor one will get paid for $50.00.
                                 </div>
                             </div>
                         </div>
@@ -155,13 +155,13 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse6">
-                                        is Contact form Working?
+                                        How much does it cost to use your services?
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapse6" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    It is free to post your product on our platform for marketing and you pay based on the result, bugs the users find. If you want to access a Technical Expert to help to fix a bug, it cost start from $100.00. Please refer more details from the Pricing page or contact us.
                                 </div>
                             </div>
                         </div>
@@ -169,27 +169,27 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse7">
-                                        How long Support Available?
+                                        If the bug severity which I find is conflict with the severity of the company, what shall I do?
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapse7" class="panel-collapse collapse">
-                                <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                                </div>
+                              <div class="panel-body">
+                                   Bugsters platform will use machine learning skills to analyze your data first and give you a reference bug severity. If the confict is still there, Bugsters will take the role of independent 3rd party to assess the severity of the bug.
+                              </div>
                             </div>
                         </div>
                            <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse8">
-                                        Easy Customization?
+                                        How to contact you?
                                     </a>
                                 </h4>
                             </div>
                             <div id="collapse8" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                   Our office is at 11 Rawson Place, Sydney, NSW, Australia. Please feel free to contact us through our email: Support@Bugsters.com or on mobile: +61 49 766 7525
                                 </div>
                             </div>
                         </div>
@@ -204,10 +204,10 @@
                         </form>
                     </div><!--sidebar-box-->
                     <div class="sidebar-box margin40">
-                        <h4>Text widget</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis. Pellentesque cursus arcu id magna euismod in elementum purus molestie.
-                        </p>
+                        <h4>Type Your Questions</h4>
+                        <form>
+                            <input type="text" class="input-faq" style="width: 360px; height: 300px;" min="1" max="5000" placeholder="Type your questions here, we will get back to you soon.">
+                        </form>
                     </div><!--sidebar-box-->
                 </div>
             </div>
