--- a/app/views/testpages/index_testpage.html.erb
+++ b/app/views/testpages/index_testpage.html.erb
@@ -30,3 +30,7 @@
   text-align: center;
 }
 -->
+
+<!-- Placeholder to display the text info in the box>
+<input type="text" class="form-control" placeholder="Search">
+-->
