--- a/app/views/faqs/index_faq.html.erb
+++ b/app/views/faqs/index_faq.html.erb
@@ -206,7 +206,7 @@
                     <div class="sidebar-box margin40">
                         <h4>Type Your Questions</h4>
                         <form>
-                            <input type="text" class="input-faq" style="width: 360px; height: 300px;" min="1" max="5000" placeholder="Type your questions here, we will get back to you soon.">
+                            <input type="text" class="input-faq" style="width: 360px; height: 300px; font-size:14px;" min="1" max="5000" placeholder="Type your questions here we will get back to you soon.">
                         </form>
                     </div><!--sidebar-box-->
                 </div>
