--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -271,8 +271,8 @@
                                 </div>
                             </div>
                             <div class="work-desc">
-                                <h3><a href="portfolio-single.html">Psd Design</a></h3>
-                                <span>Photoshop</span>
+                                <h3><a href="portfolio-single.html"> Mobile App Deep Links</a></h3>
+                                <span>$50 - $ 2000 / Bug</span>
                             </div><!--work desc-->
                         </div>
                         <div class="mix col-sm-3 page2 page3 margin30">
@@ -285,8 +285,8 @@
                                 </div>
                             </div>
                             <div class="work-desc">
-                                <h3><a href="portfolio-single.html">Mockup Design</a></h3>
-                                <span>Photoshop</span>
+                                <h3><a href="portfolio-single.html"> Online Payment</a></h3>
+                                <span>$1000 / Bug</span>
                             </div><!--work desc-->
                         </div>
                         <div class="mix col-sm-3  page3 page2 margin30 ">
@@ -299,8 +299,8 @@
                                 </div>
                             </div>
                             <div class="work-desc">
-                                <h3><a href="portfolio-single.html"> Real estate</a></h3>
-                                <span>Php</span>
+                                <h3><a href="portfolio-single.html"> Connect Mobile Data</a></h3>
+                                <span>$50 - $2000 / Bug</span>
                             </div><!--work desc-->
                         </div>
                         <div class="mix col-sm-3  page4 margin30">
@@ -313,8 +313,8 @@
                                 </div>
                             </div>
                             <div class="work-desc">
-                                <h3><a href="portfolio-single.html">E Commerce</a></h3>
-                                <span>magento</span>
+                                <h3><a href="portfolio-single.html"> Weather Assistant</a></h3>
+                                <span>$50 - $2000 / Bug</span>
                             </div><!--work desc-->
                         </div>
                         <div class="mix col-sm-3 page1 margin30 ">
@@ -327,8 +327,8 @@
                                 </div>
                             </div>
                             <div class="work-desc">
-                                <h3><a href="portfolio-single.html">Website Design</a></h3>
-                                <span>Html5 / Css3</span>
+                                <h3><a href="portfolio-single.html"> Fun Physics Learning</a></h3>
+                                <span>$50 - $2000 / Bug</span>
                             </div><!--work desc-->
                         </div>
                         <div class="mix col-sm-3  page2 margin30">
@@ -341,8 +341,8 @@
                                     </div>
                                 </div>
                                 <div class="work-desc">
-                                    <h3><a href="portfolio-single.html">Graphics Design</a></h3>
-                                    <span>Corel Draw</span>
+                                    <h3><a href="portfolio-single.html">E-Fashion Shopping</a></h3>
+                                    <span>$50 - $2000 / Bug</span>
                                 </div><!--work desc-->
                         </div>
                         <div class="mix col-sm-3  page3 margin30">
@@ -355,8 +355,8 @@
                                     </div>
                                 </div>
                                 <div class="work-desc">
-                                    <h3><a href="portfolio-single.html">Website Develop </a></h3>
-                                    <span>Wordpress</span>
+                                    <h3><a href="portfolio-single.html">Fast Financing </a></h3>
+                                    <span>$50 - $2000 / Bug</span>
                                 </div><!--work desc-->
                         </div>
                         <div class="mix col-sm-3 page4  margin30">
@@ -369,8 +369,8 @@
                                     </div>
                                 </div>
                                 <div class="work-desc">
-                                    <h3><a href="portfolio-single.html">Logo Design</a></h3>
-                                    <span>illustrate</span>
+                                    <h3><a href="portfolio-single.html">Customized Shipping</a></h3>
+                                    <span>$50 - $2000 / Bug</span>
                                 </div><!--work desc-->
                         </div>
 
@@ -594,7 +594,7 @@
                             </a><!--news link-->
                             <div class="news-desc">
                                 <span>Sports</span>
-                                <h4><a href="#">Bugsters, Result-based crowdtesting</a></h4>
+                                <h4><a href="#">The first result-based crowd-busting</a></h4>
                                 <span>By <a href="#">Caroline</a> on 10 July 2015</span> <span><a href="#">Read more...</a></span>
                             </div><!--news desc-->
                         </div>
@@ -609,7 +609,7 @@
                             </a><!--news link-->
                             <div class="news-desc">
                                 <span>Sports</span>
-                                <h4><a href="#">Bugsters, Result-based crowdtesting</a></h4>
+                                <h4><a href="#">Crowd-Geo Product Design</a></h4>
                                 <span>By <a href="#">David</a> on 11 August 2015</span> <span><a href="#">Read more...</a></span>
                             </div><!--news desc-->
                         </div>
